# poc-kijkdoos-wasm

./: .pre-commit-config.yaml  README.md  index.html  load.js  main.js  pyproject.toml  register.yaml
.github/: dependabot.yml
